# prototyper_api

./: .dockerignore  .gitignore  Makefile  README.md  alembic.ini  docker-compose.local-tests.yml  docker-compose.yml  example.env.dev  example.env.test  pyproject.toml  requirements.txt
docker/: Dockerfile
docs/graphana/: fastapi_dashboard.json  faststream_dashboard.json
src/: main.py
src/api/: schemas.py
src/api/rest/: api.py  dependencies.py
src/api/rest/controllers/: lessson_controller.py
src/core/: admin.py  api.py  dependencies.py  logger.py  schemas.py  settings.py
src/database/: base_model.py  base_repository.py  base_schemas.py  db.py  db_manager.py
src/database/migrations/: env.py
src/database/migrations/versions/: 1131c7a10cb4_.py  1da4e44be7ce_.py  44262963bd40_.py  551c7ac3776d_.py  68fb0dc90ad2_.py  85d20c3060ae_.py  9e6d0ea78eba_.py  a9d664f14f75_.py  b6ed9f30434c_.py  e2cda074a401_.py  ee9810fa96a0_.py
src/database/models/: lesson_model.py
src/lessons/: dependencies.py  models.py  repository.py  schemas.py  service.py  shemas.py  views.py
src/services/: lessons_service.py
src/texts/: dependencies.py  models.py  repository.py  schemas.py  service.py  views.py
src/users/: dependencies.py  errors.py  models.py  repository.py  schemas.py  service.py  views.py
tests/: conftest.py
tests/database/: test_repo.py
tests/end_to_end/: test_e2e.py
tests/integration/: test_service.py
tests/lessons/: test_e2e.py  test_service.py  test_views.py
tests/unit/: test_some_service.py
tests/users/: test_views.py
